# RoboProject_3

./: .gitignore  README.md
doku/: general_docs.md  motion_docs.md  prediction_docs.md  vision_docs.md
doku/Präsi/: Kick_off_projekt_3_SE4.pptx
doku/aruco_bridge/: AruCo_brücke_über_laufband.FCStd  Aruco_brücke-Körper.stl  Aruco_brücke.20260428-004330.FCBak  Aruco_brücke.FCStd  Aruco_brücke.step  Laufband modell.FCStd
doku/reglermodell/: regler_simulink.slx  test.py
doku/ros2_lorenzen/ro45_ros2_pickrobot_serial-master/ro45_ros2_pickrobot_serial/: package.xml
doku/ros2_lorenzen/ro45_ros2_pickrobot_serial-master/ro45_ros2_pickrobot_serial/config/: ro45_params.yaml
doku/simulator/: MotionControllerSimNode.py
ws/src/pickme_bringup/: CMakeLists.txt  package.xml
ws/src/pickme_bringup/launch1/: pickme.launch.py
ws/src/pickme_dev/: package.xml  setup.cfg  setup.py
ws/src/pickme_dev/pickme_dev/Camera/: PW_coord_transform.py  cali_test.py  calibration.py  cam_node.py  camera_params.npz  cap_preprocessing.py  capture_test_img.py  getPixelCoord.py  ml_detection.py  model.pkl  model2.pkl  model3.pkl  pixelcoord_test.py  roi_check.py  taking_image.py  testModel2.py  test_model.py  train.py  train2.py  train_seetings.py  visualize.py
ws/src/ro45_portalrobot_interfaces/: CMakeLists.txt  package.xml
ws/src/ro45_portalrobot_interfaces/msg/: CamData.msg  ExtDebug.msg  PredictedPos.msg  PredictedPosdelay.msg  RobotCmd.msg  RobotPosStamped.msg
ws/src/ro45_ros2_pickrobot_serial/: README.md
ws/src/ro45_ros2_pickrobot_serial/ro45_ros2_pickrobot_serial/: CMakeLists.txt
(+13 files in other folders)
